# django-crm-ve

./: LICENSE  README.md  pyproject.toml
crm/: apps.py  conf.py  enums.py
crm/api/: serializers.py  urls.py  views.py
crm/mgmt/commands/: crm_bootstrap_demo.py
crm/models/: activity.py  contact.py  lead.py  opportunity.py  quotation.py
crm/services/: converters.py
crm/tests/: test_lead_convert.py  test_quote_convert_to_invoice.py
django_crm_ve.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
