[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-crm-ve"
version = "0.1.0"
description = "Lightweight CRM for Django with leads, opportunities, quotations, and one-click conversion to sales invoices."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Verified Enquiries / Tushar K.", email = "support@verifiedenquiries.com"}]
license = {text = "MIT"}
dependencies = [
  "Django>=5.0",
  "djangorestframework>=3.15",
  "django-sales>=0.2.0",
]
classifiers = [
  "Framework :: Django",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[tool.setuptools]
include-package-data = true
packages = ["crm", "crm.models", "crm.services", "crm.api", "crm.mgmt.commands"]